1. Улучшения Collection API [#306756]