@@ -14,18 +14,18 @@ public class DepartmentsTest {
 
     @Test
     public void whenMissed() {
-        List<String> input = Collections.singletonList("k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
 
     @Test
     public void whenAllItemsFilter() {
-        List<String> input = Arrays.asList("K2/SK1", "K2/SK1/SSK1",
+        List<String> input = List.of("K2/SK1", "K2/SK1/SSK1",
                 "K2/SK1/SSK2", "K1/SK1",
                 "K1/SK1/SSK1", "K1/SK1/SSK2", "K1/SK2");
-        List<String> expect = Arrays.asList("K2", "K2/SK1", "K2/SK1/SSK1",
+        List<String> expect = List.of("K2", "K2/SK1", "K2/SK1/SSK1",
                 "K2/SK1/SSK2", "K1", "K1/SK1", "K1/SK1/SSK1", "K1/SK1/SSK2", "K1/SK2");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
@@ -33,8 +33,8 @@ public class DepartmentsTest {
 
     @Test
     public void whenNonChange() {
-        List<String> input = Arrays.asList("k1", "k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
